--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 11px 0;
+    padding: 8px 0;
 }
 
 @media (max-width: 576px) and (max-width: 1080px) {
@@ -103,6 +103,7 @@
     align-items: center;
     width: 122px;
     margin-left: 5px;
+    margin-top:5px;
 }
 
 @media (max-width: 575px) {
@@ -198,7 +199,7 @@
 
 .micro-button img {
     width: 24px;
-    height: 22px;
+    height: 24px;
 }
 
 @media (max-width: 575px) {
@@ -226,6 +227,7 @@
 
     .micro-button img {
         width: 24px;
+        height:22px;
     }
 
     .micro-button {
@@ -1584,7 +1586,7 @@
 
 .image-container {
     display: flex;
-    gap: 15px;
+    gap: 10px;
 }
 
 .image-row-box {
@@ -1645,7 +1647,7 @@
 }
 
 @media (min-width: 576px) and (max-width: 1080px) {
-    .image-container {
+    .image-container2 {
         gap: 15px;
         margin-top: 20px;
     }
@@ -1680,7 +1682,7 @@
 }
 
 @media (max-width: 575px) {
-    .image-container {
+    .image-container2 {
         margin-top: 20px;
     }
 
