--- a/style.css
+++ b/style.css
@@ -58,9 +58,9 @@
     padding: 8px 0;
 }
 
-@media (max-width: 576px) and (max-width: 1080px) {
+@media (min-width: 576px) and (max-width: 1080px) {
     .navbar-left-icon {
-        width: 150px;
+        width: 245px;
     }
 }
 
@@ -79,14 +79,19 @@
 
 .menu-icon img {
     width: 100%;
+    margin-right: 10px;
 }
 
-@media (max-width: 575px) and (max-width: 1080px) {
+@media (max-width: 576px) and (max-width: 1080px) {
     .menu-icon {
         width: 28px;
         display: flex;
         justify-content: center;
         align-items: center;
+    }
+    .menu-icon img {
+        width: 100%;
+        margin-right: 0px;
     }
 }
 
@@ -94,6 +99,7 @@
     .menu-icon {
         width: 25px;
         margin-bottom: 5px;
+        margin-right: 6px;
     }
 }
 
@@ -101,8 +107,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 122px;
-    margin-left: 5px;
+    width: 95px;
     margin-top:5px;
 }
 
@@ -113,9 +118,9 @@
     }
 }
 
-@media (min-width: 576px) and (max-width: 1080px) {
+@media (max-width: 576px) and (max-width: 1080px) {
     .logo-box {
-        width: 115px;
+        width: 95px;
         margin: 0px;
     }
 }
@@ -257,6 +262,7 @@
     .micro-button {
         width: 40px;
         height: 40px;
+        margin-left: 0px;
     }
 }
 
@@ -1114,7 +1120,6 @@
 @media (max-width: 575px) {
     .img-item-second-row {
         width: 100%;
-        /* height: 300px; */
     }
 }
 
@@ -1767,3 +1772,27 @@
         font-size: 12px;
     }
 }
+
+.inbox {
+
+    font-size: 9px;
+    width: 14px;
+    color: white;
+    font-size: 9px;
+    margin-bottom: 15px;
+}
+
+/* @media (max-width: 575px) {
+    .inbox {
+        top: 11px;
+        left: 124px;
+    }
+}
+
+@media (min-width: 576px) and (max-width: 1080px) {
+    .inbox {
+        top: 12px;
+        left: 136px;
+    }
+} */
+
