--- a/style.css
+++ b/style.css
@@ -60,13 +60,14 @@
 
 @media (min-width: 576px) and (max-width: 1080px) {
     .navbar-left-icon {
-        width: 245px;
+        width: 225px;
     }
 }
 
 @media (max-width: 575px) {
     .navbar-left-icon {
-        width: 120px;
+        width: 140px;
+        margin-right:0px;
     }
 }
 
@@ -82,12 +83,13 @@
     margin-right: 10px;
 }
 
-@media (max-width: 576px) and (max-width: 1080px) {
+@media (min-width: 576px) and (max-width: 1080px) {
     .menu-icon {
         width: 28px;
         display: flex;
         justify-content: center;
         align-items: center;
+        margin-right: 10px;
     }
     .menu-icon img {
         width: 100%;
@@ -99,7 +101,10 @@
     .menu-icon {
         width: 25px;
         margin-bottom: 5px;
-        margin-right: 6px;
+        margin-right: 0px;
+    }
+    .menu-icon img{
+        margin-right: 0px;
     }
 }
 
@@ -118,7 +123,7 @@
     }
 }
 
-@media (max-width: 576px) and (max-width: 1080px) {
+@media (min-width: 576px) and (max-width: 1080px) {
     .logo-box {
         width: 95px;
         margin: 0px;
@@ -1774,7 +1779,6 @@
 }
 
 .inbox {
-
     font-size: 9px;
     width: 14px;
     color: white;
@@ -1782,17 +1786,5 @@
     margin-bottom: 15px;
 }
 
-/* @media (max-width: 575px) {
-    .inbox {
-        top: 11px;
-        left: 124px;
-    }
-}
 
-@media (min-width: 576px) and (max-width: 1080px) {
-    .inbox {
-        top: 12px;
-        left: 136px;
-    }
-} */
 
