--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@
     }
 }
 
-.logo-box {
+.youtubelogo-box {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -117,14 +117,14 @@
 }
 
 @media (max-width: 575px) {
-    .logo-box {
+    .youtubelogo-box {
         width: 85px;
         margin-left: 10px;
     }
 }
 
 @media (min-width: 576px) and (max-width: 1080px) {
-    .logo-box {
+    .youtubelogo-box {
         width: 95px;
         margin: 0px;
     }
@@ -132,12 +132,12 @@
 
 
 
-.logo img {
+.youtubelogo img {
     width: 30px;
 }
 
 @media (max-width: 575px) {
-    .logo img {
+    .youtubelogo img {
         width: 25px;
     }
 }
@@ -154,7 +154,7 @@
     }
 }
 
-.search-bar {
+.search-bar-container {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -163,7 +163,7 @@
     padding: 0 10px;
 }
 
-.search-bar1 {
+.search-bar-row {
     display: flex;
     align-items: center;
     width: 670px;
@@ -172,7 +172,7 @@
     border: 1px solid lightgray;
 }
 
-.search-bar1-input {
+.search-barrow-input {
     width: 100%;
     height: 38px;
     padding: 10px 0px 10px 15px;
@@ -218,11 +218,11 @@
         padding: 0;
     }
 
-    .search-bar1 {
+    .search-bar-row {
         width: 100%;
     }
 
-    .search-bar1-input {
+    .search-barrow-input {
         font-size: 14px;
         padding: 5px 0px 5px 10px;
     }
@@ -248,15 +248,15 @@
 }
 
 @media (min-width: 576px) and (max-width: 1080px) {
-    .search-bar {
+    .search-bar-container {
         width: 100%;
     }
 
-    .search-bar1 {
+    .search-bar-row {
         width: 100%;
     }
 
-    .search-bar1-input {
+    .search-barrow-input {
         font-size: 15px;
     }
 
@@ -659,27 +659,27 @@
     height: 40px;
 }
 
-.image-box122 {
+.arrow-image-box {
     width: 20px;
     display: flex;
     padding: 5px;
 }
 
 @media (max-width: 575px) {
-    .image-box122 {
+    .arrow-image-box {
         margin-left: 0px;
         padding: 0px;
     }
 }
 
 @media (min-width: 576px) and (max-width: 1080px) {
-    .image-box122 {
+    .arrow-image-box{
         margin-left: 0px;
         padding: 5px;
     }
 }
 
-.image-box122 img {
+.arrow-image-box img {
     width: 15px;
     height: 15px;
     margin-top: 3px;
