--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 12px;
+    padding: 8px 16px;
 }
 
 @media (max-width: 575px) {
@@ -44,7 +44,6 @@
 
     .header_one {
         width: 100%;
-        padding: 0px 10px 0px 18px;
     }
 }
 
@@ -53,7 +52,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 8px 0;
 }
 
 @media (min-width: 576px) and (max-width: 1080px) {
@@ -1795,10 +1793,6 @@
 }
 
 
-
-
-
-
 /* ///extra media query/// */
 @media (min-width: 1081px) and (max-width: 1152px) {
     .img-row-second1 {
@@ -1820,11 +1814,88 @@
     .section-tittle-col2 {
         display: none;
     }
+    .homebox{
+        display:none;
+    }
+    .homebox2 {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin-left: 8px;
+        width: 69px;
+        height: 63px;
+        margin-top: 10px;
+        text-align: center;
+    }
+    
+    .images-box2 {
+        width: 60px;
+        margin: 0 auto; 
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .section-tittle-col1 {
+        display: flex;
+        width: 90px;
+        height: 75px;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+    }
+    
+    .category-left {
+        width: 103px;
+        padding: 0px;
+        background-color: black;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .section-tittle1 {
+        width: 90px;
+        text-align: center;
+    }
+    
+    .hometittlebox2 {
+        width: 60px;
+        text-align: center;
+    }
+    
+    .tittlebox1 {
+        width: 85px;
+        text-align: center;
+    }
+    
+    .images-box1 {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .images-box1 img {
+        width: 24px;
+        height: 24px;
+        margin: 0 auto;
+    }
+    
+    .sidebar-section {
+        width: 90px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+    }
 }
 
 @media (min-width: 1153px) and (max-width: 1311px) {
     .img-row-second2 {
-        display: none;
+        display:none;
     }
     .img-row-second3, .img-row-forth3, .img-row-forth4, .category-item-col1 {
         display: none;
@@ -1839,6 +1910,85 @@
     .section-tittle-col2 {
         display: none;
     }
+
+    .homebox{
+        display:none;
+    }
+    .homebox2 {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin-left: 8px;
+        width: 69px;
+        height: 63px;
+        margin-top: 10px;
+        text-align: center;
+    }
+    
+    .images-box2 {
+        width: 60px;
+        margin: 0 auto; 
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .section-tittle-col1 {
+        display: flex;
+        width: 90px;
+        height: 75px;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+    }
+    
+    .category-left {
+        width: 103px;
+        padding: 0px;
+        background-color: black;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .section-tittle1 {
+        width: 90px;
+        text-align: center;
+    }
+    
+    .hometittlebox2 {
+        width: 60px;
+        text-align: center;
+    }
+    
+    .tittlebox1 {
+        width: 85px;
+        text-align: center;
+    }
+    
+    .images-box1 {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .images-box1 img {
+        width: 24px;
+        height: 24px;
+        margin: 0 auto;
+    }
+    
+    .sidebar-section {
+        width: 90px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+    }
+    
 }
 
 @media (min-width: 1312px) and (max-width: 1574px) {
