--- a/style.css
+++ b/style.css
@@ -148,7 +148,7 @@
 @media (max-width: 575px) {
     .textbox {
         font-size: 16px;
-        display:none;
+        /* display:none; */
 
     }
 }
